--- a/src/search.less
+++ b/src/search.less
@@ -1,4 +1,8 @@
+// @font-face{
+//     font-family: 'SourceHanSerifSC-Heavy';
+//     src: url('./image/SourceHanSerifSC-Heavy.otf')
+// }
 .search-text{
     font-size: 20px;
-    color: #ff0;
+    color: #00f;
 }
